# annki-answer-eval

./: LICENSE  README.md  __init__.py  answer_eval.ankiaddon  package_addon.sh  pyproject.toml
