[project]
name = "anki-answer-eval"
version = "0.1.0"
description = ""
authors = [
    {name = "oseh",email = "osemudiamed5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aqt (>=25.2.4,<26.0.0)",
    "openai (>=1.78.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
